...
fun Start(modifier: Modifier = Modifier, navController: NavHostController) {

    BoxWithConstraints(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("start_screen")
    ){
        val configuration = LocalConfiguration.current
        Header(
            modifier = Modifier
                .align(alignment = Alignment.TopStart)
                .offset(x = 0.dp,
...
