...


    BoxWithConstraints(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("quiz_screen")
    ){
        if (question == null) {

            Column(
                modifier = Modifier
                    .offset(y=maxHeight/2-30.dp)
...
